fix floating btn z-index should higher than page indicator

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -516,7 +516,7 @@ page-indicator {
   position: fixed;
   bottom: 16px;
   right: 16px;
-  z-index: 15;
+  z-index: 16;
   .button-rounded {
     height: 56px;
     width: 56px;
